* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.11 ====
* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Tidy up gsexec vs GridSiteDiskMode
* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.10 ====
* Wed Jun 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add GridSiteDiskMode Apache directive to set file
  permissions.
- Add GridSiteExecMethod and GridSiteUserGroup to 
  configure suexec or extended gsexec functionality.
* Thu Jun 2 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- HTML improvements for Bug #4083
- Note that GridSite currently doesn't work with SHM
  SSL session cache, in httpd-*.conf and config guide.
- Add GridSiteExecMethod for use with gsexec
* Thu May 26 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include gsexec, a drop-in replacement for suexec,
  which can do suexec execution of CGI programs or
  pool-account mapping based on client DN.
* Tue May 24 2005 Shiv Kaushal <shiv@hep.man.ac.uk>
- Add XACML support to GACL code in libgridsite.
* Tue May 24 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.9 ====
* Mon Apr 25 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Avoid build problems when using pre-0.9.7 OpenSSL
  (ie with Globus compatibility.)
* Mon Apr 25 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.8 ====
* Mon Feb 28 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix to GRSTgaclUndenyPerm in gridsite.h (bug #7135)
  from Marco Sottilaro <marco.sottilaro@datamat.it>
* Mon Feb 28 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.7 ====
* Thu Feb 24 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add more sanity checking (signatures, dates, issuer,)
  holder) to VOMS attribute parser.
* Mon Feb 21 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add bugfix for Bug #6357 from Fabrizio Pacini 
  <fabrizio.pacini@cern.ch> to fix delegation proxy
  cache names in OpenSSL 0.9.7.