@@ -290,6 +290,12 @@ in effect.
     file being requested.
 <p>
 
+<dt><b>GRST_DESTINATION_TRANSLATED</b>
+<dd>Present if a WebDAV Destination header was given in the request with a
+    local URL. Contains the translation of the URL given into an
+    absolute path in the local filesystem.
+<p>
+
 <dt><b>GRST_HELP_URI</b>
 <dd>URI of website help pages set by GridSiteHelpURI directive.
 <p>
